--- a/Angular/tareas-frontend/src/app/tasks/task-form/task-form.component.html
+++ b/Angular/tareas-frontend/src/app/tasks/task-form/task-form.component.html
@@ -1,5 +1,5 @@
 <div class="task-form-container">
-  <h3>Create New Task</h3>
+  <h3>Nueva Tarea</h3>
   <form [formGroup]="taskForm" (ngSubmit)="onSubmit()">
     <div class="form-group">
       <label for="title">Título:</label>
